--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.11"
+		"@astrojs/tailwind": "^3.0.1",
+		"astro": "^2.0.11",
+		"tailwindcss": "^3.2.6"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9"
 	}
 }
